# capital-gains-tax-calculator

./: .pre-commit-config.yaml  README.md  capital_gains_tax_calculator.pptx  main.py  pyproject.toml  tax_calculator_simulator.ipynb  transactions.csv  transactions_00.csv  transactions_01.csv  transactions_02.csv  transactions_03.csv  transactions_04.csv
data/: transactions_00.csv  transactions_01.csv
notebooks/: tax_calculator_simulator.ipynb
src/capital_gains_tax_calculator/: main.py  tax_calculator_simulator.py
