[project]
name = "capital-gains-tax-calculator"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black (>=25.12.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "vulture (>=2.14,<3.0)",
    "setuptools (==60.1.0)",
    "virtualenv (>=20.36.1,<21.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "plotly (>=6.5.2,<7.0.0)"
]

[tool.poetry]
packages = [{include = "capital_gains_tax_calculator", from = "src"}]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
virtualenv = "^20.36.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
